--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "gulp-imagemin": "^2.0.0",
     "gulp-load-plugins": "^1.0.0",
     "gulp-newer": "^1.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.0.0",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-subtree": "^0.1.0",
     "gulp-uglify": "^1.0.1",
     "gulp-useref": "^3.0.0",
+    "gulp-util": "^3.0.7",
     "psi": "^2.0.2",
     "run-sequence": "^1.0.1",
     "sw-precache": "^3.2.0",
